# ethereum_laundering

./: .gitignore  main.py  pyproject.toml  settings.toml
data/processed/: AUC vs n_estimators vs depth.xlsx  Before_ERC20_most_rec_token_type.xlsx  Before_ERC20_most_sent_token_type.xlsx  Comparação para cada feature mais importante - Com Boxplot.xlsx  Comparação para cada feature mais importante.xlsx  Cópia de cardinalidade_numerico.xlsx  ERC20_most_rec_token_type.xlsx  ERC20_most_sent_token_type.xlsx  FPR vs TPR.xlsx  Figura 3a - ERC20_most_rec_token_type.xlsx  Figura 3b - ERC20_most_sent_token_type.xlsx  Figura 4 - AUC vs n_estimators vs depth.xlsx  Figura 5 - FPR vs TPR - Copia.xlsx  Figura 7 e 8 - df_importance.xlsx  cardinalidade_numerico.xlsx  df_after_preprocessing.xlsx  df_after_preprocessing_MEXIDO.xlsx  df_cat_test_ERC20_most_rec_token_type_after_preprocessing.xlsx  df_cat_train_ERC20_most_rec_token_type_after_preprocessing.xlsx  df_importance.xlsx  duplicated_accounts.xlsx  preprocessing_numerical.xlsx  teste.xlsx  teste_MEXIDO.xlsx  wallets_misclassified.xlsx
notebooks/: 01-business_and_data_understanding_ethereum_v1-tsuboi.ipynb  01-ethereum_business_and_data_understanding_v1-suto.ipynb  02-ethereum_data_preparation_v1-suto.ipynb  03-ethereum_modeling_v1-suto.ipynb  03-ethereum_modeling_v2-suto.ipynb  03-ethereum_modeling_v3-suto-CatBoost.ipynb  04-boxplots.ipynb  Artigo - 02-ethereum_data_preparation_v1-suto.ipynb  Artigo - 03-ethereum_modeling_v5-suto-Comparison.ipynb  Atributos.xlsx  Digraph.gv
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
