[tool.poetry]
name = "ethereum-laundering"
version = "0.1.0"
description = "Data tool for detecting fraudulent wallets in ethereum."
authors = ["Henrique Tsuboi <ht10614@gmail.com>, Gustavo Suto <guyrux@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ethereum_laundering"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = ">=1.21,<1.25"
pandas = "^2.1.0"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
scikit-learn = "^1.3.0"
llvmlite = "^0.40.1"
numba = "^0.57.1"
shap = "^0.42.1"
pycebox = "^0.0.1"
rulefit = "^0.3.1"
lime = "^0.2.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "<5.0"
blue = "^0.9.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
taskipy = "^1.12.0"
ipykernel = "^6.25.1"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings = "^0.22.0"
mkdocstrings-python = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 79

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.coverage.html]
directory = "docs/htmlcov/"

[tool.taskipy.tasks]
lint = "blue --check --diff data_describe/ && isort --check --diff data_describe/"
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=data_describe -vv"
post_test = "coverage html"