[tool.poetry]
name = "ethereum-laundering"
version = "0.1.0"
description = ""
authors = ["Gustavo Suto <guyrux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13, >=3.11"
feature-engine = "^1.8.2"
plotly = "^5.24.1"
matplotlib = "<3.8.2"
lightgbm = "^4.5.0"
missingno = "^0.5.2"
ipykernel = "^6.29.5"
ydata-profiling = "^4.12.0"
pyarrow = "^18.0.0"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.0"
catboost = "^1.2.8"
xgboost = "^3.0.1"
ipywidgets = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
